Fix: Author pages broken. Make Author & Category code more DRY. Add Instagram
_custom.scss
  Add Instagram Icon styles

custom-functions.php
  Rewrite display_author_bio and haSepharadi_cat_header so they can be used by both Author and Category pages

category.css
  Fix: content area not centered

category.php
  Move add_action() statements to top of file

author.php
  Move add_action() statements to top of file
  Fix: Affiliate Links code breaks site
  Use expanded format for "the loop", instead of concise format
  Move content header and author bio function to custom-functions.php

Switched indentation to tabs in above-mentioned files.

--- a/themes/haSepharadi/scss/partials/_custom.scss
+++ b/themes/haSepharadi/scss/partials/_custom.scss
@@ -79,13 +79,15 @@
       }
 
       &.instagram {
-        font-size: 15.4px;
+        font-size: 15.5px;
         font-weight: bold;
       }
     }
 
     i.fab.fa-instagram {
       color: $black;
+      // font-size: 1.25em;
+      // vertical-align: -15%;
     }
   }
 
